--- a/entropy-placeholder/css/main.css
+++ b/entropy-placeholder/css/main.css
@@ -2929,7 +2929,7 @@ img{
 .main-footer{
 	position:relative;
 	overflow:hidden;
-	background-color:#6916ce;
+	background-color:var(--brand-secondary);
 }
 
 .main-footer .footer-widget{
