icons, more items in row

--- a/entropy-placeholder/css/main.css
+++ b/entropy-placeholder/css/main.css
@@ -105,6 +105,10 @@ a{
 	color:var(--brand-primary);
 }
 
+a:hover{
+  color: var(--brand-secondary);
+}
+
 button,
 a:hover,a:focus,a:visited{
 	text-decoration:none;
@@ -3012,7 +3016,7 @@ img{
 
 .main-footer .nav-list li:before{
 	position:absolute;
-	content: "\f1a9";
+	content: "\f106";
 	left:0px;
 	top:1px;
 	color:var(--brand-primary);
@@ -4669,7 +4673,7 @@ img{
 .business-section-two .business-tabs .content .content-column .business-list li:before,
 .intelligence-section .intelligence-block .text li:before{
 	position:absolute;
-	content:'\f1a9';
+	content:'\f106';
 	left:0px;
 	top:0px;
 	width:50px;
@@ -7883,7 +7887,7 @@ img{
 }
 .intelligence-section .intelligence-block .text li:before{
   position:absolute;
-  content:'\f1a9';
+  content:'\f106';
   left:0;
   top:0;
   width:24px;
