separate header and footer, remove unused libraries

--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -1,29 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>Entropy HTML Template | Homepage Three</title>
-  <!-- Stylesheets -->
-  <link href="css/bootstrap.css" rel="stylesheet">
-  <link href="css/main.css" rel="stylesheet">
-  <link href="css/responsive.css" rel="stylesheet">
+{{ partial "header" . }}
 
-  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-  <link rel="icon" href="images/favicon.png" type="image/x-icon">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro&display=swap" rel="stylesheet">
-
-  <!-- Responsive -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-
-  <!--[if lt IE 9]>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
-  <!--[if lt IE 9]>
-  <script src="js/respond.js"></script><![endif]-->
-</head>
-
-<body>
 
 <div class="page-wrapper">
 
@@ -36,7 +12,7 @@
         <div class="clearfix">
 
           <div class="pull-left logo-box">
-            <div class="logo"><a href="index.html"><img src="images/qdrant_logo.png" alt="" title="Entropy"></a>
+            <div class="logo"><a href="index.html"><img src="images/qdrant_logo.svg" width="190px" alt="" title="Qdrant"></a>
             </div>
           </div>
 
@@ -123,8 +99,8 @@
 
           <!-- Image Column -->
           <div class="image-column col-lg-6 col-md-12 col-sm-12">
-            <div class="inner-column parallax-scene-1">
-              <div data-depth="0.30" class="image parallax-layer">
+            <div class="inner-column">
+              <div data-depth="0.30" class="image">
                 <img src="images/cube_less_dots_purple.png" alt=""/>
               </div>
             </div>
@@ -460,11 +436,11 @@
     <div class="auto-container">
       <div class="sponsors-outer">
         <!--Sponsors Carousel-->
-        <ul class="sponsors-carousel owl-carousel owl-theme">
-          <li class="slide-item">
+        <ul class="row clearfix">
+          <li class="col">
             <figure class="image-box"><a href="#"><img src="https://via.placeholder.com/300x115" alt=""></a></figure>
           </li>
-          <li class="slide-item">
+          <li class="col">
             <figure class="image-box"><a href="#"><img src="https://via.placeholder.com/300x115" alt=""></a></figure>
           </li>
         </ul>
@@ -659,44 +635,5 @@
 <!--Scroll to top-->
 <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-arrow-circle-up"></span></div>
 
-<script src="js/jquery.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/jquery.scrollTo.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-<script src="js/jquery.fancybox.js"></script>
-<script src="js/appear.js"></script>
-<script src="js/swiper.min.js"></script>
-<script src="js/jquery.paroller.min.js"></script>
-<script src="js/parallax.min.js"></script>
-<script src="js/tilt.jquery.min.js"></script>
-<!--Master Slider-->
-<script src="js/jquery.easing.min.js"></script>
-<script src="js/owl.js"></script>
-<script src="js/wow.js"></script>
-<script src="js/jquery-ui.js"></script>
-<script src="js/element-in-view.js"></script>
-<script src="js/script.js"></script>
-<script src="js/clipboard.min.js"></script>
-<script>
-  var clipboard = new ClipboardJS('.copy-btn');
-  $('.alert').hide();
+{{ partial "footer" . }}
 
-  clipboard.on('success', function(e) {
-    $('.alert').alert().show().addClass('show');
-    const to = setTimeout(() => {
-      $('.alert').alert().removeClass('show').hide();
-      clearTimeout(to);
-    }, 2000);
-
-    e.clearSelection();
-  });
-
-  clipboard.on('error', function(e) {
-    console.error('Action:', e.action);
-    console.error('Trigger:', e.trigger);
-  });
-</script>
-
-</body>
-</html>
