--- a/qdrant-landing/themes/qdrant/static/css/responsive.css
+++ b/qdrant-landing/themes/qdrant/static/css/responsive.css
@@ -375,7 +375,7 @@
 		margin-bottom:50px;
 	}
 	
-	.intelligence-section .image-column{
+	.features-section .image-column{
 		text-align:center;
 		margin-bottom:45px;
 	}
