--- a/qdrant-landing/themes/qdrant/layouts/_default/baseof.html
+++ b/qdrant-landing/themes/qdrant/layouts/_default/baseof.html
@@ -2,6 +2,7 @@
 <html>
     {{- partial "head.html" . -}}
     <body>
+        THE DEFAULT BASE_OF
         {{- partial "header.html" . -}}
         <div id="content">
         {{- block "main" . }}{{- end }}
