--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -12,7 +12,8 @@
         <div class="clearfix">
 
           <div class="pull-left logo-box">
-            <div class="logo"><a href="index.html"><img src="images/qdrant_logo.svg" width="190px" alt="" title="Qdrant"></a>
+            <div class="logo"><a href="index.html"><img src="/images/qdrant_logo.svg" width="190px" alt=""
+                  title="Qdrant"></a>
             </div>
           </div>
 
@@ -23,8 +24,8 @@
             <nav class="main-menu show navbar-expand-md">
               <div class="navbar-header">
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
-                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                  data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                  aria-label="Toggle navigation">
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
@@ -42,7 +43,8 @@
             </nav>
 
             <div class="outer-box">
-              <a class="btn btn-lg mt-1" href="https://github.com/qdrant/qdrant" target="_blank" title="github"><i class="icon flaticon-github"></i></a>
+              <a class="btn btn-lg mt-1" href="https://github.com/qdrant/qdrant" target="_blank" title="github"><i
+                  class="icon flaticon-github"></i></a>
             </div>
 
           </div>
@@ -71,7 +73,7 @@
 
   <!-- Banner Section -->
   <section class="banner-section-two">
-    <div class="side-layer" style="background-image: url(images/background/2.png)"></div>
+    <div class="side-layer" style="background-image: url(/images/background/2.png)"></div>
     <div class="outer-container">
       <div class="auto-container">
         <div class="row clearfix">
@@ -101,7 +103,7 @@
           <div class="image-column col-lg-6 col-md-12 col-sm-12">
             <div class="inner-column">
               <div data-depth="0.30" class="image">
-                <img src="images/cube_less_dots_purple.png" alt=""/>
+                <img src="/images/cube_less_dots_purple.png" alt="" />
               </div>
             </div>
           </div>
@@ -112,8 +114,11 @@
   </section>
   <!-- End Banner Section -->
 
-  <!-- Intelligence Section -->
-  <section class="intelligence-section">
+
+  {{ with (.Site.GetPage "section" "features") }}
+
+  <!-- Feature Section -->
+  <section class="features-section">
     <div class="auto-container">
       <div class="row clearfix">
 
@@ -122,117 +127,28 @@
           <div class="inner-column">
             <!-- Sec Title -->
             <div class="sec-title text-center">
-              <h2>We Create The Most Realistic <span>Artificial Intelligence</span></h2>
-              <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus at mauris eu
-                sollicitudin que venenatis.
+              <h2> {{ .Title | safeHTML }}</h2>
+              <div class="text">{{ .Content }}
               </div>
             </div>
             <div class="row clearfix">
 
+              {{ range .Pages }}
+              
               <!-- Intelligence Block -->
-              <div class="intelligence-block col-lg-4 col-md-4 col-sm-12">
+              <div class="feature-block col-lg-4 col-md-4 col-sm-12">
                 <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
                   <div class="icon-box d-flex justify-content-center">
-                    <i class="flaticon-api"></i>
+                    <i class="flaticon-{{ .Params.icon }}"></i>
                   </div>
-                  <h5><a href="services.html">Robust</a></h5>
+                  <h5><a>{{ .Title }}</a></h5>
                   <div class="text">
-                    Fast integration, support larger variety of data type:
-                    <ul>
-                      <li>OpenAPI v3 documentation</li>
-                      <li>Support for strings, geo-locations, and other data types.</li>
-                    </ul>
+                    {{ .Content }}
                   </div>
                 </div>
               </div>
 
-              <!-- Intelligence Block -->
-              <div class="intelligence-block col-lg-4 col-md-4 col-sm-12">
-                <div class="inner-box wow fadeInLeft" data-wow-delay="150ms" data-wow-duration="1500ms">
-                  <div class="icon-box d-flex justify-content-center">
-                    <i class="flaticon-data-1"></i>
-                  </div>
-                  <h5><a href="services.html">Accurate</a></h5>
-                  <div class="text">
-                    Maintain index integrity even with multiple filters:
-                    <ul>
-                      <li>Custom implementation of HNSW index preventing accuracy degradation (TBP)</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Intelligence Block -->
-              <div class="intelligence-block col-lg-4 col-md-4 col-sm-12">
-                <div class="inner-box wow fadeInLeft" data-wow-delay="150ms" data-wow-duration="1500ms">
-                  <div class="icon-box d-flex justify-content-center">
-                    <i class="flaticon-data-1"></i>
-                  </div>
-                  <h5><a href="services.html">Accurate</a></h5>
-                  <div class="text">
-                    Maintain index integrity even with multiple filters:
-                    <ul>
-                      <li>Custom implementation of HNSW index preventing accuracy degradation (TBP)</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-
-            </div>
-            <div class="row clearfix">
-
-              <!-- Intelligence Block -->
-              <div class="intelligence-block col-lg-4 col-md-4 col-sm-12">
-                <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
-                  <div class="icon-box d-flex justify-content-center">
-                    <i class="flaticon-distribution"></i>
-                  </div>
-                  <h5><a href="services.html">Distributed (TBD)</a></h5>
-                  <div class="text">
-                    Most reliable for large scale deployment:<br>
-                    <ul>
-                      <li>Distributed consensus algorithm with no single point of failure (TBP)</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Intelligence Block -->
-              <div class="intelligence-block col-lg-4 col-md-4 col-sm-12">
-                <div class="inner-box wow fadeInLeft" data-wow-delay="150ms" data-wow-duration="1500ms">
-                  <div class="icon-box d-flex justify-content-center">
-                    <i class="flaticon-microprocessor"></i>
-                  </div>
-                  <h5><a href="services.html">Optimized</a></h5>
-                  <div class="text">
-                    Search index tuning enables effective query execution:
-                    <ul>
-                      <li>Dynamic query planning</li>
-                      <li>Payload data indexing</li>
-                      <li>Vector quantization (TBP)</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Intelligence Block -->
-              <div class="intelligence-block col-lg-4 col-md-4 col-sm-12">
-                <div class="inner-box wow fadeInLeft" data-wow-delay="150ms" data-wow-duration="1500ms">
-                  <div class="icon-box d-flex justify-content-center">
-                    <i class="flaticon-microprocessor"></i>
-                  </div>
-                  <h5><a href="services.html">Optimized</a></h5>
-                  <div class="text">
-                    Search index tuning enables effective query execution:
-                    <ul>
-                      <li>Dynamic query planning</li>
-                      <li>Payload data indexing</li>
-                      <li>Vector quantization (TBP)</li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-
+              {{ end }}
             </div>
 
           </div>
@@ -241,7 +157,9 @@
       </div>
     </div>
   </section>
-  <!-- End Intelligence Section -->
+
+  {{ end }}
+  <!-- End Features Section -->
 
 
   <!--Installation Section-->
@@ -254,7 +172,7 @@
       <div class="code">
         <code id="copy-code">docker pull generall/qdrant</code>
         <button class="copy-btn lead ml-4" data-clipboard-target="#copy-code" title="Copy code">
-         <i class="flaticon-copy"></i>
+          <i class="flaticon-copy"></i>
         </button>
       </div>
       <div class="alert alert-dark alert-dismissible fade fixed-top mt-0" role="alert">
@@ -268,7 +186,7 @@
 
   <!-- Business Section Two -->
   <section class="business-section-two">
-    <div class="pattern-layer" style="background-image: url(images/background/pattern-11.png)"></div>
+    <div class="pattern-layer" style="background-image: url(/images/background/pattern-11.png)"></div>
     <div class="auto-container">
       <!-- Sec Title -->
       <div class="sec-title centered">
@@ -278,7 +196,7 @@
         </div>
       </div>
       <div class="inner-container">
-        <div class="pattern-layer-two" style="background-image: url(images/background/3.png)"></div>
+        <div class="pattern-layer-two" style="background-image: url(/images/background/3.png)"></div>
         <!-- Business Info Tabs -->
         <div class="business-info-tabs">
           <!-- Business Tabs -->
@@ -287,7 +205,7 @@
             <!--Tab Btns-->
             <ul class="tab-btns tab-buttons clearfix">
               <li data-tab="#prod-diabetes" class="tab-btn active-btn wow fadeInLeft" data-wow-delay="0ms"
-                  data-wow-duration="1500ms">
+                data-wow-duration="1500ms">
                 <h5>Neural <br>Text Search</h5>
                 <i class="icon flaticon-paper"></i>
               </li>
@@ -297,7 +215,7 @@
 
               </li>
               <li data-tab="#prod-education" class="tab-btn wow fadeInRight" data-wow-delay="0ms"
-                  data-wow-duration="1500ms">
+                data-wow-duration="1500ms">
                 <h5>Recommendations <br>with conditions</h5>
                 <i class="icon flaticon-advertising"></i>
               </li>
@@ -336,7 +254,7 @@
                       <div class="inner-column">
                         <div class="image">
                           <a href="https://via.placeholder.com/536x513" data-fancybox="business" data-caption=""><img
-                                  src="https://via.placeholder.com/536x513" alt=""/></a>
+                              src="https://via.placeholder.com/536x513" alt="" /></a>
                         </div>
                       </div>
                     </div>
@@ -373,7 +291,7 @@
                       <div class="inner-column">
                         <div class="image">
                           <a href="https://via.placeholder.com/536x513" data-fancybox="business" data-caption=""><img
-                                  src="https://via.placeholder.com/536x513" alt=""/></a>
+                              src="https://via.placeholder.com/536x513" alt="" /></a>
                         </div>
                       </div>
                     </div>
@@ -410,7 +328,7 @@
                       <div class="inner-column">
                         <div class="image">
                           <a href="https://via.placeholder.com/536x513" data-fancybox="business" data-caption=""><img
-                                  src="https://via.placeholder.com/536x513" alt=""/></a>
+                              src="https://via.placeholder.com/536x513" alt="" /></a>
                         </div>
                       </div>
                     </div>
@@ -451,7 +369,7 @@
   <!--End Clients Section-->
 
   <!-- End Projects Section Two -->
-  <section class="projects-section-two" style="background-image: url(images/background/pattern-9.png)">
+  <section class="projects-section-two" style="background-image: url(/images/background/pattern-9.png)">
     <div class="auto-container">
       <!-- Sec Title -->
       <div class="sec-title centered">
@@ -467,7 +385,7 @@
           <div class="inner-box wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
             <div class="block-content">
               <div class="image">
-                <a href="blog-detail.html"><img src="https://via.placeholder.com/370x223" alt=""/></a>
+                <a href="blog-detail.html"><img src="https://via.placeholder.com/370x223" alt="" /></a>
               </div>
               <div class="lower-content">
                 <h5><a href="blog-detail.html">Metric Learning</a></h5>
@@ -485,7 +403,7 @@
           <div class="inner-box wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
             <div class="block-content">
               <div class="image">
-                <a href="blog-detail.html"><img src="https://via.placeholder.com/370x223" alt=""/></a>
+                <a href="blog-detail.html"><img src="https://via.placeholder.com/370x223" alt="" /></a>
               </div>
               <div class="lower-content">
                 <h5><a href="blog-detail.html">Vector Search Tutorial</a></h5>
@@ -503,7 +421,7 @@
           <div class="inner-box wow fadeInRight" data-wow-delay="0ms" data-wow-duration="1500ms">
             <div class="block-content">
               <div class="image">
-                <a href="blog-detail.html"><img src="https://via.placeholder.com/370x223" alt=""/></a>
+                <a href="blog-detail.html"><img src="https://via.placeholder.com/370x223" alt="" /></a>
               </div>
               <div class="lower-content">
                 <h5><a href="blog-detail.html">Filterable HNSW</a></h5>
@@ -523,8 +441,8 @@
 
   <!-- Main Footer -->
   <footer class="main-footer">
-    <div class="pattern-layer" style="background-image: url(images/background/pattern-4.png)"></div>
-    <div class="pattern-layer-two" style="background-image: url(images/background/pattern-5.png)"></div>
+    <div class="pattern-layer" style="background-image: url(/images/background/pattern-4.png)"></div>
+    <div class="pattern-layer-two" style="background-image: url(/images/background/pattern-5.png)"></div>
     <div class="auto-container">
       <!--Widgets Section-->
       <div class="widgets-section">
@@ -538,8 +456,7 @@
               </div>
               <ul class="contact-list">
                 <li><span class="icon fa fa-map-o"></span> Berlin</li>
-                <li><span class="icon fa fa-envelope"></span> <a
-                        href="mailto:info@qdrant.com">info@qdrant.com</a></li>
+                <li><span class="icon fa fa-envelope"></span> <a href="mailto:info@qdrant.com">info@qdrant.com</a></li>
               </ul>
             </div>
           </div>
@@ -571,7 +488,7 @@
                   <div class="thumb"><a href="blog-detail.html"><img src="https://via.placeholder.com/76x70" alt=""></a>
                   </div>
                   <h4><a href="blog-detail.html">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus
-                    at.</a></h4>
+                      at.</a></h4>
                 </div>
 
                 <div class="post">
@@ -591,7 +508,8 @@
               <ul class="social-box">
                 <li><a href="https://github.com/qdrant/qdrant" target="_blank"><i class="flaticon-github"></i></a></li>
                 <li><a href="#" target="_blank"><i class="flaticon-linkedin"></i></a></li>
-                <li><a href="https://t.me/neural_network_engineering" target="_blank"><i class="flaticon-telegram"></i></a></li>
+                <li><a href="https://t.me/neural_network_engineering" target="_blank"><i
+                      class="flaticon-telegram"></i></a></li>
               </ul>
 
             </div>
@@ -615,8 +533,8 @@
           <div class="language-column col-lg-6 col-md-12 col-sm-12">
             <!--Language-->
             <div class="language dropdown"><a class="btn btn-default dropdown-toggle" id="dropdownMenu2"
-                                              data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" href="#">Language:
-              English &nbsp;<span class="icon fa fa-angle-down"></span></a>
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" href="#">Language:
+                English &nbsp;<span class="icon fa fa-angle-down"></span></a>
               <ul class="dropdown-menu style-one" aria-labelledby="dropdownMenu2">
                 <li><a href="#">English</a></li>
               </ul>
@@ -636,4 +554,3 @@
 <div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-arrow-circle-up"></span></div>
 
 {{ partial "footer" . }}
-
