--- a/qdrant-landing/themes/qdrant/layouts/partials/js.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/js.html
@@ -1,5 +1,5 @@
 <!-- highlight.js -->
-{{ if .Site.Params.highlight | default false }}
+{{ if .Site.Params.highlight }}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.1/highlight.min.js"></script>
     {{ range .Site.Params.highlightLanguages }}
         <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.1/languages/{{ . }}.min.js"></script>
