--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -83,10 +83,10 @@
           <div class="content-column col-lg-6 col-md-12 col-sm-12">
             <div class="inner-column">
               <h1><span>Qdrant</span><br>Neural Search Engine</h1>
-              <div class="text">Build your own
+              <div class="sec-title text mb-3">Build your own
                 AI-powered product
                 with Qdrant - vector search engine.
-                <h5><span>It's free and open source!</span></h5>
+                <h5 class="font-weight-bold mt-3 mb-0">It's Free and <span>Open Source</span></h5>
               </div>
 
               <!-- Installation Section -->
@@ -425,6 +425,34 @@
   </section>
   <!-- End Projects Section Two -->
 
+  <!-- Contact Form Section -->
+  <section class="clients-section my-5">
+    <div class="auto-container">
+      <div class="row">
+        <div class="col-12 sec-title text-center">
+          <h2>Neural Search Engine</h2>
+          <div class="text">Build your own
+            AI-powered product
+            with Qdrant - vector search engine.
+          </div>
+        </div>
+        <div class="content-column offset-lg-3 col-lg-6 col-md-12 col-sm-12">
+          <!-- Newsletter Form -->
+          <div class="newsletter-form">
+            <form method="post" action="contact.html">
+              <div class="form-group">
+                <input type="email" name="email" value="" placeholder="Enter Your Email" required="">
+                <button type="submit" class="theme-btn btn-style-three"><span class="txt">Tell me more</span>
+                </button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End of Contact Section -->
+
   <!-- Main Footer -->
   <footer class="main-footer">
     <div class="pattern-layer" style="background-image: url(/images/background/pattern-4.png)"></div>
@@ -565,5 +593,6 @@
     </div>
   </div>
 </div>
+<!-- End of Modal -->
 
 {{ partial "footer" . }}
