--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -1,77 +1,5 @@
 {{ partial "header" . }}
 
-
-<div class="page-wrapper">
-
-  <!-- Main Header-->
-  <header class="main-header header-style-three">
-
-    <!--Header-Upper-->
-    <div class="header-upper">
-      <div class="auto-container">
-        <div class="clearfix">
-
-          <div class="pull-left logo-box">
-            <div class="logo"><a href="index.html"><img src="/images/qdrant_logo.svg" width="190px" alt=""
-                                                        title="Qdrant"></a>
-            </div>
-          </div>
-
-          <div class="nav-outer clearfix">
-            <!--Mobile Navigation Toggler-->
-            <div class="mobile-nav-toggler"><i class="icon flaticon-menu"></i></div>
-            <!-- Main Menu -->
-            <nav class="main-menu show navbar-expand-md">
-              <div class="navbar-header">
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false"
-                        aria-label="Toggle navigation">
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-              </div>
-
-              <div class="navbar-collapse collapse clearfix" id="navbarSupportedContent">
-                <ul class="navigation clearfix">
-                  <li class="current"><a href="index.html">Home</a></li>
-                  <li><a href="solutions.html">Solutions</a></li>
-                  <li><a href="documentation.html">Documentation</a></li>
-                </ul>
-              </div>
-
-            </nav>
-
-            <div class="outer-box">
-              <a class="btn btn-lg mt-1" href="https://github.com/qdrant/qdrant" target="_blank" title="github"><i
-                      class="icon flaticon-github"></i></a>
-            </div>
-
-          </div>
-
-        </div>
-      </div>
-    </div>
-    <!--End Header Upper-->
-
-    <!-- Mobile Menu  -->
-    <div class="mobile-menu">
-      <div class="menu-backdrop"></div>
-      <div class="close-btn"><span class="icon flaticon-multiply"></span></div>
-
-      <nav class="menu-box">
-        <div class="nav-logo"><a href="index.html"><img src="https://via.placeholder.com/160x55" alt="" title=""></a>
-        </div>
-        <div class="menu-outer">
-          <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
-        </div>
-      </nav>
-    </div><!-- End Mobile Menu -->
-
-  </header>
-  <!--End Main Header -->
-
   <!-- Banner Section -->
   <section class="banner-section-two">
     <div class="side-layer" style="background-image: url(/images/background/2.png)"></div>
@@ -86,11 +14,11 @@
               <div class="sec-title text mb-3">Build your own
                 AI-powered product
                 with Qdrant - vector search engine.
-                <h5 class="font-weight-bold mt-3 mb-0">It's Free and <span>Open Source</span></h5>
+                <h4 class="font-weight-bold mt-3 mb-0">It's Free and <a target="_blank" href="{{ .Site.Params.github }}">Open Source </a></h4>
               </div>
 
               <!-- Installation Section -->
-              <section>
+              <section class="installation-section">
                 <p>Get started by downloading a pre-build Docker Image - it is only 35Mb!</p>
                 <div class="code">
                   <code id="copy-code">docker pull generall/qdrant</code>
@@ -100,8 +28,8 @@
                     </button>
                   </span>
                 </div>
-                <p>Take a look a tour through our [Quick Start Guide]<br>
-                  or build your first neural search wit out step-by-step [Tutorial]</p>
+                <p>Take a look through our <a target="_blank" href="{{ .Site.Params.quick_start }}">Quick Start Guide</a><br>
+                  or build your own neural search with our step-by-step <a target="_blank" href="{{ .Site.Params.tutorial }}">Tutorial</a></p>
               </section>
               <!--End Installation Section-->
 
